# ViralArchitectEngine_v1

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  etostark_dictionnaire  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  ios-preview.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/dist-electron/: main.js  preload.js
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/scripts/: prepare-python.js
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src/hooks/: useEngineStatus.ts  useKeyboardShortcuts.ts
apps/desktop/src/lib/: animations.ts  api.ts  utils.ts
apps/desktop/src/pages/: AdminPage.tsx  ClipEditorPage.tsx  HomePage.tsx  OnboardingPage.tsx  ProjectPage.tsx  SettingsPage.tsx  SurveillancePage.tsx
apps/desktop/src/store/: index.ts
apps/desktop/src/styles/: globals.css
apps/forge-engine/: ARCHITECTURE_REVAMP.md  README.md  alembic.ini  package.json  pyproject.toml  requirements-ci.txt  requirements-demo.txt  requirements-minimal.txt  requirements.txt  test_whisper.py
apps/forge-engine/alembic/: README  env.py
apps/forge-engine/alembic/versions/: 203248308398_add_device_tokens.py  a1b2c3d4e5f6_add_clip_render_params.py  fca1c1626c2d_initial_schema.py
apps/forge-engine/scripts/: gen_contract_fixture.py
apps/forge-engine/src/forge_engine/: __init__.py  main.py  py.typed
apps/forge-engine/src/forge_engine/api/: __init__.py
apps/forge-engine/src/forge_engine/api/v1/: __init__.py  router.py
apps/forge-engine/src/forge_engine/api/v1/endpoints/: __init__.py  api_keys.py  capabilities.py  channels.py  clips_mobile.py  devices.py  jobs.py  monitor.py  profiles.py  projects.py  reviews.py  social.py  templates.py  thumbnails.py  webhooks.py  websockets.py
apps/forge-engine/src/forge_engine/core/: __init__.py  auth.py  config.py  crypto.py  database.py  jobs.py  log_scrub.py  range_response.py  rate_limit.py  scheduling.py  security.py  timeutils.py  twitch_webhook.py
apps/forge-engine/src/forge_engine/models/: __init__.py  api_key.py  artifact.py  channel.py  device_token.py  job.py  profile.py  project.py  review.py  segment.py  template.py  training_data.py
apps/forge-engine/src/forge_engine/scripts/: seed_api_key.py
apps/forge-engine/src/forge_engine/services/: __init__.py  analysis.py  analytics.py  apns.py  audio_analysis.py  auto_pipeline.py  caption_edit.py  captions.py  channel_dictionary.py  content_generation.py  credential_store.py  dictionary.py  export.py  facecam_tracking.py  ffmpeg.py  forced_alignment.py  ingest.py  intro.py  layout.py  llm_local.py  monitor.py  pipeline_builder.py  playwright_scraper.py  publish_scheduler.py  qc.py  render.py  scene_detection.py  social_publish.py  sound_design.py  transcription.py  transcription_provider.py  twitch_chat.py  vad_prefilter.py  virality.py  virality_quality.py  vod_detector.py  whisperx_alignment.py  youtube_dl.py
apps/forge-engine/tests/: __init__.py  conftest.py  test_apns.py  test_audio_event_scoring.py  test_auth.py  test_caption_edit.py  test_caption_presets.py  test_caption_remap.py  test_captions.py  test_clip_rerender.py  test_clips_mobile.py  test_content_title.py  test_contract_mobile.py  test_credential_store.py  test_crypto.py  test_dictionary_corrections.py  test_forced_alignment.py  test_heuristic_caption.py  test_llm_prompt_escape.py  test_log_scrub.py  test_migrations.py  test_pipeline_builder.py  test_pipeline_e2e.py  test_qc_lufs.py  test_range_response.py  test_rate_limit.py  test_scheduling.py  test_segment_clustering.py  test_segmentation.py  test_social_publish_post.py  test_social_publish_status.py  test_transcription_hallucination.py  test_twitch_chat.py  test_twitch_webhook.py  test_virality.py  test_virality_quality.py  test_vod_detector.py  test_ws_auth.py
apps/ios/: README.md  project.yml
apps/ios/ForgeLab/: ForgeLab.entitlements  ForgeLabApp.swift  Info.plist
apps/ios/ForgeLab/Models/: Analytics.swift  ApiEnvelope.swift  ApiError.swift  Capabilities.swift  Channel.swift  Clip.swift  Job.swift  Project.swift  Segment.swift
apps/ios/ForgeLab/Services/: BundleDownloader.swift  DeepLinkRouter.swift  DemoData.swift  ForgeAPI+Analytics.swift  ForgeAPI+Devices.swift  ForgeAPI+Editor.swift  ForgeAPI+Pilot.swift  ForgeAPI+Segment.swift  ForgeAPI+Sources.swift  ForgeAPI.swift  ForgeSocket.swift  NotificationManager.swift  PushRegistrar.swift  Settings.swift  ZipReader.swift
apps/ios/ForgeLab/Theme/: Glass.swift  Motion.swift  Theme.swift
apps/ios/ForgeLab/Views/: AddChannelSheet.swift  CaptionsSheet.swift  ClipDetailView.swift  ClipEditorView.swift  HomeView.swift  JobsSheet.swift  MainTabView.swift  PilotView.swift  ProjectDetailView.swift  QueueView.swift  RootView.swift  SettingsView.swift  SourcesView.swift  (+3 more)
apps/ios/ForgeLabTests/: AnalyticsContractTests.swift  ForgeAPITests.swift  MobileContractTests.swift  PilotContractTests.swift  SourcesContractTests.swift  ZipReaderTests.swift
apps/ios/ForgeLabUITests/: ForgeLabUITests.swift
apps/ios/preview/: index.html
apps/web-review/: package.json
apps/web-review/src/: App.tsx
assets/: README.md
docs/: RESUME.md  TIKTOK_GRADE_PLAN.md  ULTRAPLAN_MOBILE.md  UX_UI_AUDIT.md  WS-C_MOBILE_PLAN.md  design_language.md  functional_spec.md  issues.md  pipeline.md  plan_ios.md  plugin_system.md  roadmap.md  troubleshooting.md
scripts/: check-ffmpeg.ps1  demo.ps1  setup-ios.sh  setup.ps1
(+58 files in other folders)
