[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-engine"
version = "1.0.0"
description = "FORGE Engine - Viral clip processing backend"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "FORGE/LAB Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=0.10.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.1.0",
    "librosa>=0.10.1",
    "scipy>=1.11.0",
    "scenedetect[opencv]>=0.6.2",
    "watchfiles>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.0",
]
whisperx = [
    "whisperx>=3.1.0",
]
scraper = [
    # Channel VOD auto-detection (Twitch/YouTube). After install, also run:
    #   python -m playwright install chromium
    "playwright>=1.60.0",
]
apns = [
    # Real remote push (APNs). The ES256 provider JWT is built with
    # `cryptography` (already a core dep), so the only thing missing for a real
    # send is HTTP/2: APNs requires an HTTP/2 connection, which httpx gets from
    # the `h2` package. Install into the engine venv with:
    #   .venv-full/bin/pip install "httpx[http2]"
    "httpx[http2]>=0.25.0",
]

[project.scripts]
forge-engine = "forge_engine.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from err (exception chaining — fix later)
    "B905",  # zip() without strict= (fix later)
    "B018",  # useless expression (often docstrings)
    "B007",  # loop variable unused
    "E402",  # module import not at top (after conditional imports)
    "E741",  # ambiguous variable name (l, O, I)
    "E722",  # bare except (fix later)
    "F401",  # imported but unused (optional ML deps in try/except)
    "W293",  # blank line contains whitespace
]

[tool.ruff.lint.isort]
known-first-party = ["forge_engine"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that take a long time (deselect with '-m not slow')",
    "gpu: tests that require a CUDA-capable GPU",
    "e2e: end-to-end tests requiring a full running environment",
    "integration: integration tests requiring external services (FFmpeg, etc.)",
]

